feat: added read states, changed user settings
